checking smtp and geoserver connections

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -60,6 +60,7 @@
   "Additional properties not allowed": "Additional properties not allowed",
   "Address": "Address",
   "Address not found": "Address not found",
+  "Address not found. Important! Make sure the server's REST API is enabled": "Address not found. Important! Make sure the server's REST API is enabled",
   "Administration": "Administration",
   "Administrator": "Administrator",
   "Advanced": "Advanced",
@@ -160,6 +161,7 @@
   "Connection Status": "Connection Status",
   "Connection Successful": "Connection Successful",
   "Connection timeout, verify the port": "Connection timeout, verify the port",
+  "Connection timeout, verify the port. Important! Make sure the server's REST API is enabled": "Connection timeout, verify the port. Important! Make sure the server's REST API is enabled",
   "Connection with service refused, check if the service is running!": "Connection with service refused, check if the service is running!",
   "Convert all": "Convert all",
   "Could not save data provider due: name must be unique;  name: name must be unique": "Could not save data provider due: name must be unique;  name: name must be unique",
@@ -266,11 +268,14 @@
   "E-mail": "E-mail",
   "Edit": "Edit",
   "Email": "Email",
+  "Email Address": "Email Address",
   "Email Host": "Email Host",
   "Email Host is required": "Email Host is required",
   "Email is required": "Email is required",
   "Email Server": "Email Server",
   "Email Server Connection": "Email Server Connection",
+  "Email Server Test": "Email Server Test",
+  "Email successfully sent": "Email successfully sent",
   "Emails": "Emails",
   "End": "End",
   "End Date": "End Date",
@@ -280,6 +285,7 @@
   "Expert mode": "Expert mode",
   "Export": "Export",
   "Failed to connect, verify the connection parameters": "Failed to connect, verify the connection parameters",
+  "Failed to connect, verify the connection parameters. Important! Make sure the server's REST API is enabled": "Failed to connect, verify the connection parameters. Important! Make sure the server's REST API is enabled",
   "Fields": "Fields",
   "FILE": "FILE",
   "File": "File",
@@ -398,6 +404,7 @@
   "Invalid intersection. Static data series must have at least a attribute.": "Invalid intersection. Static data series must have at least a attribute.",
   "Invalid mask": "Invalid mask",
   "Invalid path": "Invalid path",
+  "Invalid port. Important! Make sure the server's REST API is enabled": "Invalid port. Important! Make sure the server's REST API is enabled",
   "Invalid range of ports": {
     " A valid port is from 1 to 65535": "Invalid range of ports. A valid port is from 1 to 65535"
   },
@@ -453,6 +460,7 @@
   "Main Navigation": "Main Navigation",
   "Manual": "Manual",
   "Map Display": "Map Display",
+  "Maps Server Connection": "Maps Server Connection",
   "Maps Server Parameters": "Maps Server Parameters",
   "Maps Server URI": "Maps Server URI",
   "Maps Server URI is required for View Services": "Maps Server URI is required for View Services",
@@ -680,6 +688,7 @@
   "Selected Project": "Selected Project",
   "Semantics": "Semantics",
   "Semicolon": "Semicolon",
+  "Send Test Email": "Send Test Email",
   "Service": "Service",
   "Service  Name": "Service  Name",
   "Service Data": "Service Data",
@@ -757,7 +766,9 @@
   "table_name": "Table name",
   "Temporal": "Temporal",
   "Test connection": "Test connection",
+  "TerraMA² Test Message": "TerraMA² Test Message",
   "Text": "Text",
+  "The connection was refused by the server, verify the connection parameters. Important! Make sure the server's REST API is enabled": "The connection was refused by the server, verify the connection parameters. Important! Make sure the server's REST API is enabled",
   "The first line is a header?": "The first line is a header?",
   "The process was started successfully": "The process was started successfully",
   "The values of the levels must be numeric and be in a growing order%2C and the names of the levels must be filled": "The values of the levels must be numeric and be in a growing order%2C and the names of the levels must be filled",
@@ -816,6 +827,8 @@
   "Username": "Username",
   "Username is required": "Username is required",
   "Username or password does not match": "Username or password does not match",
+  "Username or password does not match. Important! Make sure the server's REST API is enabled": "Username or password does not match. Important! Make sure the server's REST API is enabled",
+  "Username or password does not match. Important! Verify if your email server is not blocking the connection": "Username or password does not match. Important! Verify if your email server is not blocking the connection",
   "Users": "Users",
   "Users Handling": "Users Handling",
   "VALUE": "VALUE",
