--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -59,6 +59,7 @@
   "Additional properties not allowed": "Propriedades adicionais não são permitidas",
   "Address": "Endereço",
   "Address not found": "Endereço não encontrado",
+  "Address not found. Important! Make sure the server's REST API is enabled": "Endereço não encontrado. Importante! Certifique-se de que a API REST do servidor está habilitada",
   "Administration": "Administração",
   "Administrator": "Administrador",
   "Advanced": "Avançado",
@@ -156,6 +157,7 @@
   "Connection Status": "Status da Conexão",
   "Connection Successful": "Conexão bem sucedida",
   "Connection timeout, verify the port": "Tempo limite de conexão excedido, verifique a porta",
+  "Connection timeout, verify the port. Important! Make sure the server's REST API is enabled": "Tempo limite de conexão excedido, verifique a porta. Importante! Certifique-se de que a API REST do servidor está habilitada",
   "Connection with service refused, check if the service is running!": "Conexão com o serviço recusada, verifique se o mesmo está em execução!",
   "Convert all": "Converter todos",
   "Could not save data provider due: name must be unique;  name: name must be unique": "Não foi possível salvar o servidor de dados, já existe um registro com o nome inserido, e o nome deve ser único.",
@@ -260,11 +262,14 @@
   "E-mail": "E-mail",
   "Edit": "Editar",
   "Email": "Email",
+  "Email Address": "Endereço de Email",
   "Email Host": "Endereço",
   "Email Host is required": "O preenchimento do endereço é obrigatório",
   "Email is required": "O preenchimento do email é obrigatório",
   "Email Server": "Servidor de Email",
   "Email Server Connection": "Conexão com o Servidor de Email",
+  "Email Server Test": "Teste de Servidor de Email",
+  "Email successfully sent": "Email enviado com sucesso",
   "Emails": "Emails",
   "End": "Fim",
   "End Date": "Data Final",
@@ -274,6 +279,7 @@
   "Expert mode": "Modo especialista",
   "Export": "Exportar",
   "Failed to connect, verify the connection parameters": "Falha ao conectar, verifique os parâmetros de conexão",
+  "Failed to connect, verify the connection parameters. Important! Make sure the server's REST API is enabled": "Falha ao conectar, verifique os parâmetros de conexão. Importante! Certifique-se de que a API REST do servidor está habilitada",
   "Fields": "Campos",
   "FILE": "ARQUIVO",
   "File": "Arquivo",
@@ -391,6 +397,7 @@
   "Invalid intersection. Static data series must have at least a attribute.": "Interseção inválida. Séries de dados estáticos devem possuir pelo menos um atributo.",
   "Invalid mask": "Máscara inválida",
   "Invalid path": "Caminho inválido",
+  "Invalid port. Important! Make sure the server's REST API is enabled": "Porta inválida. Importante! Certifique-se de que a API REST do servidor está habilitada",
   "Invalid range of ports": {
     " A valid port is from 1 to 65535": "Intervalo inválido de portas. Uma porta válida é de 1 a 65535"
   },
@@ -429,6 +436,7 @@
   "Main Navigation": "Navegação Principal",
   "Manual": "Manual",
   "Map Display": "Tela do Mapa",
+  "Maps Server Connection": "Conexão com o Servidor de Mapas",
   "Maps Server Parameters": "Parâmetros do servidor de mapas",
   "Maps Server URI": "URI do servidor de mapas",
   "Maps Server URI is required for View Services": "URI do servidor de mapas é obrigatório para serviço de visualização",
@@ -647,6 +655,7 @@
   "Selected Project": "Projeto Selecionado",
   "Semantics": "Semântica",
   "Semicolon": "Ponto e vírgula",
+  "Send Test Email": "Enviar Email de Teste",
   "Service": "Serviço",
   "Service  Name": "Nome do Serviço",
   "Service Data": "Serviço de Dados",
@@ -720,7 +729,9 @@
   "table_name": "Nome da tabela",
   "Temporal": "Temporal",
   "Test connection": "Testar Conexão",
+  "TerraMA² Test Message": "Mensagem de Teste do TerraMA²",
   "Text": "Texto",
+  "The connection was refused by the server, verify the connection parameters. Important! Make sure the server's REST API is enabled": "A conexão foi recusada pelo servidor, verifique os parâmetros de conexão. Importante! Certifique-se de que a API REST do servidor está habilitada",
   "The first line is a header?": "A primeira linha é um cabeçalho?",
   "The values of the levels must be numeric and be in a growing order, and the names of the levels must be filled": "Os valores dos níveis devem ser numéricos e estar em uma ordem crescente, e os nomes dos níveis devem ser preenchidos",
   "Theme": "Tema",
@@ -776,6 +787,8 @@
   "Username": "Usuário",
   "Username is required": "O preenchimento do usuário é obrigatório",
   "Username or password does not match": "O usuário ou a senha não correspondem",
+  "Username or password does not match. Important! Make sure the server's REST API is enabled": "O usuário ou a senha não correspondem. Importante! Certifique-se de que a API REST do servidor está habilitada",
+  "Username or password does not match. Important! Verify if your email server is not blocking the connection": "O usuário ou a senha não correspondem. Importante! Verifique se o seu servidor de e-mail não está bloqueando a conexão",
   "Users": "Usuários",
   "Users Handling": "Manipulação de Usuários",
   "VALUE": "VALOR",
