changing risk to legend

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -288,8 +288,8 @@
   "Enviroment": "Enviroment",
   "Enviroment Variables": "Enviroment Variables",
   "Error in PostGIS connection: Invalid host": "Error in PostGIS connection: Invalid host",
-  "Error creating Alert. \nCould not save risk due SequelizeUniqueConstraintError: Validation error": "Error creating Alert. Could not save risk due: name must be unique.",
-  "Error updating Alert. \nCould not save risk due SequelizeUniqueConstraintError: Validation error": "Error updating Alert. Could not save risk due: name must be unique.",
+  "Error creating Alert. \nCould not save legend due SequelizeUniqueConstraintError: Validation error": "Error creating Alert. Could not save legend due: name must be unique.",
+  "Error updating Alert. \nCould not save legend due SequelizeUniqueConstraintError: Validation error": "Error updating Alert. Could not save legend due: name must be unique.",
   "Expert mode": "Expert mode",
   "Export": "Export",
   "Failed to connect, verify the connection parameters": "Failed to connect, verify the connection parameters",
@@ -446,6 +446,7 @@
   "Language": "Language",
   "Last": "Last",
   "Latitude": "Latitude",
+  "Latitude / Y (m)": "Latitude / Y (m)",
   "Latitude is invalid": "Latitude is invalid",
   "Leave it empty": "Leave it empty",
   "Level Name": "Level Name",
@@ -469,6 +470,7 @@
   "Login": "Login",
   "Logout": "Logout",
   "Longitude": "Longitude",
+  "Longitude / X (m)": "Longitude / X (m)",
   "Longitude is invalid": "Longitude is invalid",
   "Main Navigation": "Main Navigation",
   "Manual": "Manual",
@@ -511,7 +513,7 @@
   "Name is required": "Name is required",
   "Nearest Neighbor": "Nearest Neighbor",
   "New Level": "New Level",
-  "New Risk": "New Risk",
+  "New Legend": "New Legend",
   "Next": "Next",
   "No": "No",
   "No analysis found": "No analysis found",
@@ -541,7 +543,7 @@
   "Notification": "Notification",
   "Notification emails is required": "Notification emails is required",
   "Notify on change": "Notify on change",
-  "Notify on risk level": "Notify on risk level",
+  "Notify on legend level": "Notify on legend level",
   "Number": "Number",
   "Number of Bands": "Number of Bands",
   "Number of Colors": "Number of Colors",
@@ -646,15 +648,15 @@
   "Resolution X": "Resolution X",
   "Resolution Y": "Resolution Y",
   "Resolution is required": "Resolution is required",
-  "Risk Description": "Risk Description",
-  "Risk Level": "Risk Level",
-  "Risk Level Description": "Risk Level Description",
-  "Risk Level Name": "Risk Level Name",
-  "Risk Name": "Risk Name",
-  "Risk Value": "Risk Value",
-  "Risk attribute": "Risk attribute",
-  "Risk attribute is required": "Risk attribute is required",
-  "Risks": "Risks",
+  "Legend Description": "Legend Description",
+  "Legend Level": "Legend Level",
+  "Legend Level Description": "Legend Level Description",
+  "Legend Level Name": "Legend Level Name",
+  "Legend Name": "Legend Name",
+  "Legend Value": "Legend Value",
+  "Legend attribute": "Legend attribute",
+  "Legend attribute is required": "Legend attribute is required",
+  "Legends": "Legends",
   "Run": "Run",
   "SRID": "SRID",
   "SRID is invalid": "SRID is invalid",
