--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -281,8 +281,8 @@
   "Enviroment": "Ambiente",
   "Enviroment Variables": "Variáveis de Ambiente",
   "Error in PostGIS connection: Invalid host": "Erro na conexão, endereço inválido",
-  "Error creating Alert. \nCould not save risk due SequelizeUniqueConstraintError: Validation error": "Erro ao criar o alerta. Não foi possível salvar o risco, já existe um registro com o nome inserido, e o nome deve ser único.",
-  "Error updating Alert. \nCould not save risk due SequelizeUniqueConstraintError: Validation error": "Erro ao atualizar o alerta. Não foi possível salvar o risco, já existe um registro com o nome inserido, e o nome deve ser único.",
+  "Error creating Alert. \nCould not save legend due SequelizeUniqueConstraintError: Validation error": "Erro ao criar o alerta. Não foi possível salvar a legenda, já existe um registro com o nome inserido, e o nome deve ser único.",
+  "Error updating Alert. \nCould not save legend due SequelizeUniqueConstraintError: Validation error": "Erro ao atualizar o alerta. Não foi possível salvar a legenda, já existe um registro com o nome inserido, e o nome deve ser único.",
   "Expert mode": "Modo especialista",
   "Export": "Exportar",
   "Failed to connect, verify the connection parameters": "Falha ao conectar, verifique os parâmetros de conexão",
@@ -422,6 +422,7 @@
   "Language": "Linguagem",
   "Last": "Último",
   "Latitude": "Latitude",
+  "Latitude / Y (m)": "Latitude / Y (m)",
   "Latitude is invalid": "Latitude é inválida",
   "Leave it empty": "Deixar vazio",
   "Level Name": "Nome do Nível",
@@ -444,6 +445,7 @@
   "Login": "Login",
   "Logout": "Sair",
   "Longitude": "Longitude",
+  "Longitude / X (m)": "Longitude / X (m)",
   "Longitude is invalid": "Longitude é inválida",
   "Main Navigation": "Navegação Principal",
   "Manual": "Manual",
@@ -486,7 +488,7 @@
   "Name is required": "O preenchimento do nome é obrigatório",
   "Nearest Neighbor": "Vizinho mais próximo",
   "New Level": "Novo Nível",
-  "New Risk": "Novo Risco",
+  "New Legend": "Nova Legenda",
   "Next": "Próximo",
   "No": "Não",
   "No analysis found": "Nenhuma análise encontrada",
@@ -514,7 +516,7 @@
   "Notification": "Notificação",
   "Notification emails is required": "O preenchimento dos emails de notificação é obrigatório",
   "Notify on change": "Notificar quando houver mudança",
-  "Notify on risk level": "Notificar a partir do nível",
+  "Notify on legend level": "Notificar a partir do nível",
   "Number": "Número",
   "Number of Bands": "Número de bandas",
   "Number of Colors": "Número de cores",
@@ -616,13 +618,13 @@
   "Resolution X": "Resolução X",
   "Resolution Y": "Resolução Y",
   "Resolution is required": "Resolução é requerida",
-  "Risk Description": "Descrição do Risco",
-  "Risk Level": "Nível de Risco",
-  "Risk Name": "Nome do Risco",
-  "Risk Value": "Valor do Risco",
-  "Risk attribute": "Atributo de Risco",
-  "Risk attribute is required": "O preenchimento do atributo de risco é obrigatório",
-  "Risks": "Riscos",
+  "Legend Description": "Descrição da Legenda",
+  "Legend Level": "Nível da Legenda",
+  "Legend Name": "Nome da Legenda",
+  "Legend Value": "Valor da Legenda",
+  "Legend attribute": "Atributo da Legenda",
+  "Legend attribute is required": "O preenchimento do atributo da legenda é obrigatório",
+  "Legends": "Legendas",
   "Run": "Executar",
   "SRID": "SRID",
   "SRID is invalid": "SRID é inválido",
