--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -714,6 +714,7 @@
   "Service Name": "Service Name",
   "Service Port": "Service Port",
   "Service Registration": "Service Registration",
+  "Service info": "Service info",
   "Service is required": "Service is required",
   "Service name is required": "Service name is required",
   "Service not active": "Service not active",
@@ -721,7 +722,9 @@
   "Service port is already used by other process": "Service port is already used by other process",
   "Service port is invalid": "Service port is invalid",
   "Service port is required": "Service port is required",
+  "Service start time": "Service start time",
   "Service type is required": "Service type is required",
+  "Service version": "Service version",
   "Services": "Services",
   "Services Handling": "Services Handling",
   "Show": "Show",
