creating legends management screens

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -449,6 +449,7 @@
   "Latitude / Y (m)": "Latitude / Y (m)",
   "Latitude is invalid": "Latitude is invalid",
   "Leave it empty": "Leave it empty",
+  "Legend Registration": "Legend Registration",
   "Level Name": "Level Name",
   "Lightning occurrence": "Lightning occurrence",
   "Line Stroke Width": "Line Stroke Width",
