--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -425,6 +425,7 @@
   "Latitude / Y (m)": "Latitude / Y (m)",
   "Latitude is invalid": "Latitude é inválida",
   "Leave it empty": "Deixar vazio",
+  "Legend Registration": "Registro de Legenda",
   "Level Name": "Nome do Nível",
   "Lightning occurrence": "Ocorrência de raios",
   "Line Stroke Width": "Largura da linha",
