improving the file explorer

--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -71,6 +71,7 @@
   "Alert name is required": "O preenchimento do nome do alerta é obrigatório",
   "Alerts": "Alertas",
   "Alias": "Pseudônimo",
+  "All configured authentication methods failed": "O usuário ou a senha não correspondem",
   "All rights reserved": "Todos os direitos reservados",
   "Analyse only data inside selected plan": "Analisar dados somente dentro do plano selecionado",
   "Analysis": "Análises",
@@ -280,6 +281,7 @@
   "Enter default value": "Insira o valor padrão",
   "Enviroment": "Ambiente",
   "Enviroment Variables": "Variáveis de Ambiente",
+  "Error in connection, check the host and the port": "Erro na conexão, verifique o endereço e a porta",
   "Error in PostGIS connection: Invalid host": "Erro na conexão, endereço inválido",
   "Error creating Alert. \nCould not save risk due SequelizeUniqueConstraintError: Validation error": "Erro ao criar o alerta. Não foi possível salvar o risco, já existe um registro com o nome inserido, e o nome deve ser único.",
   "Error updating Alert. \nCould not save risk due SequelizeUniqueConstraintError: Validation error": "Erro ao atualizar o alerta. Não foi possível salvar o risco, já existe um registro com o nome inserido, e o nome deve ser único.",
@@ -504,6 +506,7 @@
       "": "Nenhuma PCD disponível. Por favor, adicione pelo menos uma PCD."
     }
   },
+  "No folders to show.": "Nenhuma pasta a ser exibida.",
   "No intersection data series selected": "Nenhuma interseção da série de dados selecionada",
   "No project found": "Nenhum projeto encontrado",
   "No project found.": "Nenhum projeto encontrado.",
@@ -657,6 +660,7 @@
   "Select the Analysis Service to be Used": "Selecione o serviço de análise para ser usado",
   "Select the Collector Service to be Used": "Selecione o serviço de coleta para ser usado",
   "Select the DataSeries": "Selecione a série de dados",
+  "Select the Folder": "Selecione a pasta desejada",
   "Select the Monitored Object": "Selecionar o Objeto Monitorado",
   "Select the View Service to be Used": "Selecione o serviço de visualização para ser usado",
   "Select the analysis to user": "Selecione a análise para o usuário",
@@ -691,6 +695,7 @@
   "Service version": "Versão",
   "Services": "Serviços",
   "Services Handling": "Manipulação de Serviços",
+  "SFTP": "SFTP",
   "Show": "Exibir",
   "Showing": "Exibindo de",
   "Showing 0 to 0 of 0 entries": "Exibindo de 0 a 0 de 0 registros",
