--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -73,6 +73,7 @@
   "Alert name is required": "Alert name is required",
   "Alerts": "Alerts",
   "Alias": "Alias",
+  "All configured authentication methods failed": "Username or password does not match",
   "All rights reserved": "All rights reserved",
   "An error occurred during TerraMA² Service Page loading": {
     "TypeError": " self.$watch is not a function"
@@ -287,6 +288,7 @@
   "Enter default value": "Enter default value",
   "Enviroment": "Enviroment",
   "Enviroment Variables": "Enviroment Variables",
+  "Error in connection, check the host and the port": "Error in connection, check the host and the port",
   "Error in PostGIS connection: Invalid host": "Error in PostGIS connection: Invalid host",
   "Error creating Alert. \nCould not save risk due SequelizeUniqueConstraintError: Validation error": "Error creating Alert. Could not save risk due: name must be unique.",
   "Error updating Alert. \nCould not save risk due SequelizeUniqueConstraintError: Validation error": "Error updating Alert. Could not save risk due: name must be unique.",
@@ -529,6 +531,7 @@
       "": "No dcp available. Please add at least one dcp."
     }
   },
+  "No folders to show.": "No folders to show.",
   "No intersection data series selected": "No intersection data series selected",
   "No project found": "No project found",
   "No project found.": "No project found.",
@@ -691,6 +694,7 @@
   "Select the Analysis Service to be Used": "Select the Analysis Service to be Used",
   "Select the Collector Service to be Used": "Select the Collector Service to be Used",
   "Select the DataSeries": "Select the DataSeries",
+  "Select the Folder": "Select the Folder",
   "Select the Monitored Object": "Select the Monitored Object",
   "Select the View Service to be Used": "Select the View Service to be Used",
   "Select the analysis to user": "Select the analysis to user",
@@ -727,6 +731,7 @@
   "Service version": "Service version",
   "Services": "Services",
   "Services Handling": "Services Handling",
+  "SFTP": "SFTP",
   "Show": "Show",
   "Showing": "Showing",
   "Showing 0 to 0 of 0 entries": "Showing 0 to 0 of 0 entries",
