Behavior to inform the user to select at least one attribute in intersection data

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -686,6 +686,7 @@
   "Select a level": "Select a level",
   "Select a report type": "Select a report type",
   "Select a value": "Select a value",
+  "Select at least one attribute": "Select at least one attribute",
   "Select attribute identifier": "Select attribute identifier",
   "Select attributes": "Select attributes",
   "Select the Alert Service to be Used": "Select the Alert Service to be Used",
