--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -652,6 +652,7 @@
   "Select a level": "Selecione um nível",
   "Select a report type": "Selecione um tipo de relatório",
   "Select a value": "Selecione um valor",
+  "Select at least one attribute": "Selecione ao menos um atributo",
   "Select attribute identifier": "Selecionar o atributo identificador",
   "Select attributes": "Selecione atributos",
   "Select the Alert Service to be Used": "Selecione o Serviço de Alerta a ser usado",
