Change Conditional to Automatic in locales files

--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -107,6 +107,7 @@
   "Attributes": "Atributos",
   "Attributes to be Converted": "Atributos a Serem Convertidos",
   "Author": "Autor",
+  "Automatic": "Automático",
   "Average": "Média",
   "Band": "Banda",
   "Band Number": "Número da banda",
@@ -146,7 +147,6 @@
   "Comma": "Vírgula",
   "Commands": "Comandos",
   "Condition": "Condição",
-  "Conditional": "Condicional",
   "Conditioned": "Condicionado",
   "Confirm": "Confirmar",
   "Confirm Password": "Confirmar Senha",
