--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -112,6 +112,7 @@
   "Attributes": "Attributes",
   "Attributes to be Converted": "Attributes to be Converted",
   "Author": "Author",
+  "Automatic": "Automatic",
   "Average": "Average",
   "Band": "Band",
   "Band Number": "Band Number",
@@ -151,7 +152,6 @@
   "Comma": "Comma",
   "Commands": "Commands",
   "Condition": "Condition",
-  "Conditional": "Conditional",
   "Conditioned": "Conditioned",
   "Confirm": "Confirm",
   "Confirm Password": "Confirm Password",
