--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -415,6 +415,7 @@
   "Interpolation method is required": "Interpolation method is required",
   "Intersection": "Intersection",
   "Invalid alias": "Invalid alias",
+  "Invalid configuration for the TerraMA² data directory": "Invalid configuration for the TerraMA² data directory",
   "Invalid folder": "Invalid folder",
   "Invalid format": "Invalid format",
   "Invalid intersection. Static data series must have at least a attribute.": "Invalid intersection. Static data series must have at least a attribute.",
@@ -794,6 +795,7 @@
   "table_name": "Table name",
   "Temporal": "Temporal",
   "Test connection": "Test connection",
+  "TerraMA² data directory": "TerraMA² data directory",
   "TerraMA² Test Message": "TerraMA² Test Message",
   "Text": "Text",
   "The connection was refused by the server, verify the connection parameters. Important! Make sure the server's REST API is enabled": "The connection was refused by the server, verify the connection parameters. Important! Make sure the server's REST API is enabled",
