--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -407,6 +407,7 @@
   "Interpolation method is required": "Método de interpolação é requerido",
   "Intersection": "Interseção",
   "Invalid alias": "Pseudônimo inválido",
+  "Invalid configuration for the TerraMA² data directory": "A atual configuração do diretório de dados do TerraMA² é inválida",
   "Invalid folder": "Pasta inválida",
   "Invalid format": "Formato inválido",
   "Invalid intersection. Static data series must have at least a attribute.": "Interseção inválida. Séries de dados estáticos devem possuir pelo menos um atributo.",
@@ -756,6 +757,7 @@
   "table_name": "Nome da tabela",
   "Temporal": "Temporal",
   "Test connection": "Testar Conexão",
+  "TerraMA² data directory": "Diretório de dados do TerraMA²",
   "TerraMA² Test Message": "Mensagem de Teste do TerraMA²",
   "Text": "Texto",
   "The connection was refused by the server, verify the connection parameters. Important! Make sure the server's REST API is enabled": "A conexão foi recusada pelo servidor, verifique os parâmetros de conexão. Importante! Certifique-se de que a API REST do servidor está habilitada",
