--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -38,8 +38,10 @@
   "%Y - Four digits year": "%Y - Ano com quatro digitos",
   "%d - Day": "%d - Dia",
   "%d Day": "%d Dia",
+  "%d Dia": "%d Dia",
   "%m Month": "%m Mês",
   "%y - Two digits year": "%y - Ano com dois digitos",
+  ". The process was started successfully": ". O processo foi iniciado com sucesso",
   "404 not found": "404 não encontrado",
   "Access": "Acesso",
   "Activate": "Ativar",
@@ -73,6 +75,9 @@
   "Alias": "Pseudônimo",
   "All configured authentication methods failed": "O usuário ou a senha não correspondem",
   "All rights reserved": "Todos os direitos reservados",
+  "An error occurred during TerraMA² Service Page loading": {
+    "TypeError": " self.$watch não é uma função"
+  },
   "Analyse only data inside selected plan": "Analisar dados somente dentro do plano selecionado",
   "Analysis": "Análises",
   "Analysis Author": "Autor da Análise",
@@ -167,6 +172,7 @@
   "Could not save data series due:  project_id: project_id must be unique,\nname: name must be unique": "Não foi possível salvar a série de dados, já existe um registro com o nome inserido, e o nome deve ser único.",
   "Could not save project: name must be unique": "Não foi possível salvar o projeto, já existe um registro com o nome inserido, e o nome deve ser único.",
   "Count": "Contagem",
+  "Crop raster": "Recortar Matriz",
   "Custom": "Personalizada",
   "DB connection": "Conexão da Base de Dados",
   "DCP": "PCD",
@@ -207,6 +213,7 @@
   "Data Server is required": "Selecione um servidor de dados",
   "Data Server name is required": "O preenchimento do nome do servidor de dados é obrigatório",
   "Data Server protocol is required": "O preenchimento do tipo do servidor de dados é obrigatório",
+  "Data Server timeout is required": "O preenchimento do tempo limite do servidor de dados é obrigatório",
   "Data Servers": "Servidores de Dados",
   "Data Set": "Conjunto de Dados",
   "Data Set Description": "Descrição do Conjunto de Dados",
@@ -335,6 +342,7 @@
   "Generate": "Gerar",
   "Generate Image": "Generação de Imagem",
   "Generate an image": "Gerar uma imagem",
+  "Generic Format for CSV files": "Formato genérico para arquivos CSV",
   "GeoTIFF grid": "Grade GeoTIFF",
   "Geometric Object": "Objeto Geométrico",
   "GrADS": "Formato GrADS",
@@ -346,6 +354,7 @@
   "Grid - ASC-Grid": "Matriz - ASC-Grid",
   "Grid - GDAL (other formats)": "Matriz - GDAL (demais formatos)",
   "Grid - GeoTiff": "Matriz - GeoTiff",
+  "Grid - Geotiff": "Matriz - GeoTiff",
   "Grid - GrADS": "Matriz - GrADS",
   "Grid - Grib2": "Matriz - Grib2",
   "Grid - HDF5": "Matriz - HDF5",
@@ -420,6 +429,22 @@
   "Invalid value": "Valor inválido",
   "Invalid value for the field": "Valor inválido para o campo",
   "It performs Analysis Validation in order to check if it will able to generate a valid data series": "Executa Validação de Análise para verificar se pode gerar uma série de dados válido",
+  "It seems you are using a different versions of TerraMA²": {
+    " Current version of TerraMA² Web is 4": {
+      "0": {
+        "0-alpha5 but the TerraMA² service version is  4": {
+          "0": {
+            "0-alpha5\n": {
+              " Some operations may not work properly": "Parece que você está usando uma versão diferente do TerraMA². A versão atual do TerraMA² Web é 4.0.0-alpha5, mas a versão do serviço TerraMA² é 4.0.0-alpha5\n. Algumas operações podem não funcionar corretamente"
+            }
+          }
+        },
+        "0-alpha5 but the TerraMA² service version is nada": {
+          " Some operations may not work properly": "Parece que você está usando uma versão diferente do TerraMA². A versão atual do TerraMA² Web é 4.0.0-alpha5, mas a versão do serviço TerraMA² é 4.0.0-alpha5\n. Algumas operações podem não funcionar corretamente"
+        }
+      }
+    }
+  },
   "It should have at least one dcp": "Adicione pelo menos uma PCD",
   "It will activate ": "Será ativado ",
   "Kind": "Tipo",
@@ -436,6 +461,7 @@
   "Load Project": "Carregar Projeto",
   "Load configuration": "Carregar Configuração",
   "Loading": "Carregando",
+  "Local Collector updated": "Coletor local atualizado",
   "Local Service": "Serviço local",
   "Log": "Log",
   "Log Configuration": "Configuração do Log",
@@ -513,8 +539,10 @@
   "No project found": "Nenhum projeto encontrado",
   "No project found.": "Nenhum projeto encontrado.",
   "No projects found.": "Nenhum projeto encontrado.",
+  "No view service found": "Nenhum serviço de visualização encontrado",
   "Nome": "Nome",
   "None": "Nenhum",
+  "Note": " Sem configuração de armazenamento, estes dados serão acessados quando necessário.",
   "Note: No storager configuration, this data will be accessed when needed.": "Nota: Sem configuração de armazenamento, estes dados serão acessados quando necessário.",
   "Notification": "Notificação",
   "Notification emails is required": "O preenchimento dos emails de notificação é obrigatório",
@@ -532,6 +560,7 @@
   "OGR static data file": "Arquivo estático OGR",
   "OK": "OK",
   "Object Monitored": "Objeto Monitorado",
+  "Obs": " insira os endereços separados por ponto e vírgula",
   "Obs: enter the addresses separated by semicolons": "Obs: insira os endereços separados por ponto e vírgula",
   "Occurrence": "Ocorrência",
   "Occurrence CSV": "Ocorrência CSV",
@@ -541,6 +570,7 @@
   "Occurrence – INPE lightning program": "Ocorrência - Prog. de Raios / INPE",
   "Occurrence – PostGIS": "Ocorrência - PostGIS",
   "Online": "Online",
+  "Oops! Page not found": "Oops! Página não encontrada",
   "Operation": "Operação",
   "Operation is required": "Operação é requerida",
   "Operators": "Operadores",
@@ -596,6 +626,7 @@
   "Projection SRID": "Projeção SRID",
   "Projects": "Projetos",
   "Properties name line": "Linha dos nomes",
+  "Properties name lines": "Linhas dos nomes",
   "Property name": "Nome da propriedade",
   "Provider": "Provedor",
   "Provider Output": "Servidor de saída",
@@ -624,6 +655,8 @@
   "Resolution is required": "Resolução é requerida",
   "Risk Description": "Descrição do Risco",
   "Risk Level": "Nível de Risco",
+  "Risk Level Description": "Descrição do Nível de Risco",
+  "Risk Level Name": "Nome do Nível de Risco",
   "Risk Name": "Nome do Risco",
   "Risk Value": "Valor do Risco",
   "Risk attribute": "Atributo de Risco",
@@ -651,6 +684,8 @@
   "Seconds": "Segundos",
   "Select": "Selecionar",
   "Select Area of Interest": "Selecione Área de Interesse",
+  "Select Attibutes": "Selecione atributos",
+  "Select Attributes": "Selecione atributos",
   "Select DataSeries": "Selecione a série de dados",
   "Select Static DataSeries": "Selecione uma série de dados estáticos",
   "Select a column": "Selecione uma coluna",
@@ -685,11 +720,13 @@
   "Service Data": "Serviço de Dados",
   "Service Description": "Descrição do Serviço",
   "Service Executable Path": "Caminho do Executável do Serviço",
+  "Service Name": "Nome do Serviço",
   "Service Port": "Porta do Serviço",
   "Service Registration": "Registro de Serviços",
   "Service info": "Informações do serviço",
   "Service is required": "Selecione um serviço",
   "Service name is required": "O preenchimento do nome do serviço é obrigatório",
+  "Service not active": "Serviço não ativo",
   "Service Executable Path is required": "O preenchimento do caminho do executável do serviço é obrigatório",
   "Service port is already used by other process": "Porta do serviço já utilizada por outro processo",
   "Service port is invalid": "Porta do serviço é inválida",
@@ -705,9 +742,11 @@
   "Showing 0 to 0 of 0 entries": "Exibindo de 0 a 0 de 0 registros",
   "Sign In": "Entrar",
   "Sign in to start your session": "Faça login para iniciar a sua sessão",
+  "Simplified Report": "Relatório Simplificado",
   "Slice by area": "Recortar por área",
   "Slice by limits": "Recortar por limites",
   "Smallest grid": "Grade menor",
+  "Some operations may not work properly": "Algumas operações podem não funcionar corretamente",
   "Ssh Connection": "Conexão Ssh",
   "Ssh Hostname": "Nome da máquina Ssh",
   "Ssh Port": "Porta Ssh",
@@ -762,10 +801,13 @@
   "Text": "Texto",
   "The connection was refused by the server, verify the connection parameters. Important! Make sure the server's REST API is enabled": "A conexão foi recusada pelo servidor, verifique os parâmetros de conexão. Importante! Certifique-se de que a API REST do servidor está habilitada",
   "The first line is a header?": "A primeira linha é um cabeçalho?",
+  "The process was started successfully": "O processo foi iniciado com sucesso",
+  "The values of the levels must be numeric and be in a growing order%2C and the names of the levels must be filled": "Os valores dos níveis devem ser numéricos e estar em uma ordem crescente%2C e os nomes dos níveis devem ser preenchidos",
   "The values of the levels must be numeric and be in a growing order, and the names of the levels must be filled": "Os valores dos níveis devem ser numéricos e estar em uma ordem crescente, e os nomes dos níveis devem ser preenchidos",
   "Theme": "Tema",
   "There are invalid fields on form": "Existem valores inválidos no formulário",
   "There are invalid fields on form. Important! Make sure the server's REST API is enabled": "Existem valores inválidos no formulário. Importante! Certifique-se de que a API REST do servidor está habilitada",
+  "There is already a service registered in same port ": "Já existe um serviço registrado na mesma porta ",
   "Thursday": "Quinta-feira",
   "Time": "Hora",
   "Time Interval": "Intervalo de tempo",
@@ -854,12 +896,14 @@
   "X is invalid number": "X é um número inválido",
   "X is required": "X é requerido",
   "X min": "X min",
+  "XML Style": "Estilo do XML",
   "Y": "Y",
   "Y is invalid number": "Y é um número inválido",
   "Y is required": "Y é requerido",
   "Yes": "Sim",
   "active": "ativo",
   "alias": "pseudônimo",
+  "but the TerraMA² service version is": "mas a versão do serviço TerraMA² é",
   "check all items": "selecionar todos os itens",
   "cm": "cm",
   "d": "d",
@@ -876,6 +920,7 @@
   "m": "m",
   "mask": "máscara",
   "min": "min",
+  "name": "nome",
   "of": "de",
   "or try using the search form.": "ou tente usar o formulário de busca.",
   "projection": "projeção",
