fixing busy port messages and giving the user feedback in the service start

--- a/webapp/locales/es_ES.json
+++ b/webapp/locales/es_ES.json
@@ -924,5 +924,7 @@
 	"Comma": "",
 	"latitude": "",
 	"Nome": "",
-	" deleted": ""
+	" deleted": "",
+  "Error: The port number is busy, port ": "",
+  "Service error": ""
 }
