--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -601,6 +601,7 @@
   "Port is required for": "Porta é requerida para",
   "Port must be a number": "Porta deve ser um número",
   "Port number": "Número da porta",
+  "Error: The port number is busy, port ": "Erro: O número de porta está em uso, porta ",
   "POSTGIS": "POSTGIS",
   "PostGIS occurrence": "Ocorrência PostGIS",
   "PostGIS static data": "Dado Estático PostGIS",
@@ -723,6 +724,7 @@
   "Service Name": "Nome do Serviço",
   "Service Port": "Porta do Serviço",
   "Service Registration": "Registro de Serviços",
+  "Service error": "Erro de serviço",
   "Service info": "Informações do serviço",
   "Service is required": "Selecione um serviço",
   "Service name is required": "O preenchimento do nome do serviço é obrigatório",
