--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -600,6 +600,7 @@
   "Port is required for": "Port is required for",
   "Port must be a number": "Port must be a number",
   "Port number": "Port number",
+  "Error: The port number is busy, port ": "Error: The port number is busy, port ",
   "POSTGIS": "POSTGIS",
   "PostGIS occurrence": "PostGIS occurrence",
   "PostGIS static data": "PostGIS static data",
@@ -722,6 +723,7 @@
   "Service Name": "Service Name",
   "Service Port": "Service Port",
   "Service Registration": "Service Registration",
+  "Service error": "Service error",
   "Service info": "Service info",
   "Service is required": "Service is required",
   "Service name is required": "Service name is required",
