Default wind xml style file

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -274,6 +274,7 @@
   "Dynamic Data Series": "Dynamic Data Series",
   "E-mail": "E-mail",
   "Edit": "Edit",
+  "Edition": "Edition",
   "Email": "Email",
   "Email Address": "Email Address",
   "Email Host": "Email Host",
@@ -514,6 +515,7 @@
   "Name": "Name",
   "Name is required": "Name is required",
   "Nearest Neighbor": "Nearest Neighbor",
+  "New": "New",
   "New Level": "New Level",
   "New Risk": "New Risk",
   "Next": "Next",
@@ -890,11 +892,13 @@
   "Weekly": "Weekly",
   "When the value is 0, it will use thread number supported by the server": "When the value is 0, it will use thread number supported by the server",
   "When value is 0, the default will be supported threads by server": "When value is 0, the default will be supported threads by server",
+  "Wind": "Wind",
   "Wizard mode": "Wizard mode",
   "X": "X",
   "X is invalid number": "X is invalid number",
   "X is required": "X is required",
   "X min": "X min",
+  "XML": "XML",
   "XML Style": "XML Style",
   "Y": "Y",
   "Y is invalid number": "Y is invalid number",
