Changed colors generation of style component

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -49,6 +49,7 @@
   "Active Server": "Active Server",
   "Active mode": "Active mode",
   "Add": "Add",
+  "Add color": "Add color",
   "Add filter configuration": "Add filter configuration",
   "Add intersection configuration": "Add intersection configuration",
   "Add new": "Add new",
@@ -275,6 +276,7 @@
   "E-mail": "E-mail",
   "Edit": "Edit",
   "Edition": "Edition",
+  "Editor": "Editor",
   "Email": "Email",
   "Email Address": "Email Address",
   "Email Host": "Email Host",
@@ -337,6 +339,7 @@
   "FTP": "FTP",
   "Functions": "Functions",
   "GDAL raster": "GDAL raster",
+  "GRADIENT": "GRADIENT",
   "GRID": "GRID",
   "General": "General",
   "General Data": "General Data",
@@ -886,6 +889,7 @@
   "WFS Attribute": "WFS Attribute",
   "WFS Attribute Layer": "WFS Attribute Layer",
   "WFS Attributes": "WFS Attributes",
+  "WIND": "WIND",
   "We could not find the page you were looking for": "We could not find the page you were looking for",
   "We could not find the page you were looking for. Meanwhile, you may ": "We could not find the page you were looking for. Meanwhile, you may ",
   "Wednesday": "Wednesday",
@@ -904,6 +908,7 @@
   "Y is invalid number": "Y is invalid number",
   "Y is required": "Y is required",
   "Yes": "Yes",
+  "You must generate the style colors to classify Data Series": "You must generate the style colors to classify Data Series",
   "active": "active",
   "alias": "alias",
   "but the TerraMA² service version is": "but the TerraMA² service version is",
@@ -934,9 +939,5 @@
   "to": "to",
   "total entries": "total entries",
   "updated": "updated",
-  "w": "w",
-  "Editor": "Editor",
-  "WIND": "WIND",
-  "GRADIENT": "GRADIENT",
-  "You must generate the style colors to classify Data Series": "You must generate the style colors to classify Data Series"
+  "w": "w"
 }
