--- a/webapp/locales/es_ES.json
+++ b/webapp/locales/es_ES.json
@@ -926,5 +926,7 @@
 	"Nome": "",
 	" deleted": "",
   "Error: The port number is busy, port ": "",
-  "Service error": ""
+  "Service error": "",
+  "Error: Error occurred during the service startup. Error: Error: exit code 127": "",
+  "Error: Status Timeout exceeded.": ""
 }
