--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -289,6 +289,8 @@
   "Enter default value": "Insira o valor padrão",
   "Enviroment": "Ambiente",
   "Enviroment Variables": "Variáveis de Ambiente",
+  "Error: Error occurred during the service startup. Error: Error: exit code 127": "Erro: Ocorreu um erro durante a inicialização do serviço. O executável do serviço não foi encontrado.",
+  "Error: Status Timeout exceeded.": "Erro: Tempo limite de resposta atingido.",
   "Error in connection, check the host and the port": "Erro na conexão, verifique o endereço e a porta",
   "Error in PostGIS connection: Invalid host": "Erro na conexão, endereço inválido",
   "Error creating Alert. \nCould not save risk due SequelizeUniqueConstraintError: Validation error": "Erro ao criar o alerta. Não foi possível salvar o risco, já existe um registro com o nome inserido, e o nome deve ser único.",
