creating private views

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -615,6 +615,7 @@
   "Pre-processing": "Pre-processing",
   "Prefix": "Prefix",
   "Previous": "Previous",
+  "Private": "Private",
   "Processing": "Processing",
   "Processing time": "Processing time",
   "Profile": "Profile",
