--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -616,6 +616,7 @@
   "Pre-processing": "Pre-processamento",
   "Prefix": "Prefixo",
   "Previous": "Anterior",
+  "Private": "Privado",
   "Processing": "Processando",
   "Processing time": "Tempo de processamento",
   "Profile": "Perfil",
