improving advanced filter

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -265,6 +265,7 @@
   "Delimiter character": "Delimiter character",
   "Dependency failed - key must exist": "Dependency failed - key must exist",
   "Description": "Description",
+  "Direct Access": "Direct Access",
   "Distance Units": "Distance Units",
   "Do not filter": "Do not filter",
   "Do not make pre-analysis": "Do not make pre-analysis",
