--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -265,6 +265,7 @@
   "Delimiter character": "Caractere delimitador",
   "Dependency failed - key must exist": "Falha na dependência - a chave deve existir",
   "Description": "Descrição",
+  "Direct Access": "Acesso Direto",
   "Distance Units": "Unidade de Distância",
   "Do not filter": "Não filtrar",
   "Do not make pre-analysis": "Não executar pré-análises",
