--- a/webapp/locales/es_ES.json
+++ b/webapp/locales/es_ES.json
@@ -936,5 +936,8 @@
   "Editor": "",
   "Add color": "",
   "Private": "",
-  "Direct Access": ""
+  "Direct Access": "",
+  "Create View": "",
+  "View Service": "",
+  "View Service is required": ""
 }
