--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -173,6 +173,7 @@
   "Could not save data series due:  project_id: project_id must be unique,\nname: name must be unique": "Could not save data series due: name must be unique.",
   "Could not save project: name must be unique": "Could not save project: name must be unique",
   "Count": "Count",
+  "Create View": "Create View",
   "Creation Type": "Creation Type",
   "Crop raster": "Crop raster",
   "Custom": "Custom",
@@ -887,6 +888,8 @@
   "View Description": "View Description",
   "View Name": "View Name",
   "View Registration": "View Registration",
+  "View Service": "View Service",
+  "View Service is required": "View Service is required",
   "View Update": "View Update",
   "View name is required": "View name is required",
   "Views": "Views",
