Change label to Risk band

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -669,6 +669,8 @@
   "Risk Value": "Risk Value",
   "Risk attribute": "Risk attribute",
   "Risk attribute is required": "Risk attribute is required",
+  "Risk band": "Risk band",
+  "Risk band is required": "Risk band is required",
   "Risks": "Risks",
   "Run": "Run",
   "SRID": "SRID",
