--- a/webapp/locales/es_ES.json
+++ b/webapp/locales/es_ES.json
@@ -939,5 +939,7 @@
   "Direct Access": "",
   "Create View": "",
   "View Service": "",
-  "View Service is required": ""
+  "View Service is required": "",
+  "Risk band": "",
+  "Risk band is required": ""
 }
