--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -167,6 +167,7 @@
   "Connection timeout, verify the port. Important! Make sure the server's REST API is enabled": "Connection timeout, verify the port. Important! Make sure the server's REST API is enabled",
   "Connection with service refused, check if the service is running!": "Connection with service refused, check if the service is running!",
   "Convert all": "Convert all",
+  "Could not remove legend SequelizeForeignKeyConstraintError: update or delete on table \"legends\" violates foreign key constraint \"alerts_legend_id_fkey\" on table \"alerts\"": "Could not remove legend: the legend is being used by an alert.",
   "Could not save data provider due: name must be unique;  name: name must be unique": "Could not save data provider due: name must be unique;  name: name must be unique",
   "Could not save data provider due: project_id must be unique; name must be unique;  project_id: project_id must be unique,\nname: name must be unique": "Could not save data provider due: name must be unique.",
   "Could not save data series due:  name: name must be unique": "Could not save data series due: name must be unique",
