--- a/webapp/locales/es_ES.json
+++ b/webapp/locales/es_ES.json
@@ -936,5 +936,6 @@
   "Editor": "",
   "Add color": "",
   "Private": "",
-  "Direct Access": ""
+  "Direct Access": "",
+	"Could not remove legend SequelizeForeignKeyConstraintError: update or delete on table \"legends\" violates foreign key constraint \"alerts_legend_id_fkey\" on table \"alerts\"": ""
 }
