Adding .tif extension on mask of geotiff dinamic data

--- a/webapp/locales/es_ES.json
+++ b/webapp/locales/es_ES.json
@@ -941,5 +941,6 @@
   "View Service": "",
   "View Service is required": "",
   "Risk band": "",
-  "Risk band is required": ""
+  "Risk band is required": "",
+  "Grid - ASCII": ""
 }
