--- a/webapp/locales/es_ES.json
+++ b/webapp/locales/es_ES.json
@@ -943,5 +943,21 @@
   "View Service is required": "",
   "Legend band": "",
   "Legend band is required": "",
-  "Grid - ASCII": ""
+  "Grid - ASCII": "",
+  "Legends": "",
+  "Legend Level": "",
+  "Legend Level Name": "",
+  "Latitude / Y (m)": "",
+  "Legend attribute is required": "",
+  "Legend Value": "",
+  "Legend Description": "",
+  "Notify on legend level": "",
+  "Longitude / X (m)": "",
+  "Legend Level Description": "",
+  "Legend attribute": "",
+  "New Legend": "",
+  "Legend Registration": "",
+  "Legend Name": "",
+  "Error creating Alert. \nCould not save legend due SequelizeUniqueConstraintError: Validation error": "Error creating Alert. Could not save legend due: name must be unique.",
+  "Error updating Alert. \nCould not save legend due SequelizeUniqueConstraintError: Validation error": "Error updating Alert. Could not save legend due: name must be unique."
 }
