--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -953,5 +953,6 @@
   "to": "a",
   "total entries": "total de registros",
   "updated": "atualizado",
-  "w": "w"
+  "w": "w",
+  "The service can not access the log database!": "O serviço não pode acessar o banco de logs!"
 }
