Pattern to host of ftp

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -951,5 +951,6 @@
   "to": "to",
   "total entries": "total entries",
   "updated": "updated",
-  "w": "w"
+  "w": "w",
+  "Invalid address": "Invalid address"
 }
