--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -953,5 +953,6 @@
   "to": "a",
   "total entries": "total de registros",
   "updated": "atualizado",
-  "w": "w"
+  "w": "w",
+  "Invalid address": "Endereço inválido"
 }
