--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -43,6 +43,7 @@
   "%y - Two digits year": "%y - Two digits year",
   ". The process was started successfully": ". The process was started successfully",
   "404 not found": "404 not found",
+  "About": "About",
   "Access": "Access",
   "Activate": "Activate",
   "Active": "Active",
