--- a/webapp/locales/es_ES.json
+++ b/webapp/locales/es_ES.json
@@ -961,5 +961,6 @@
   "Error creating Alert. \nCould not save legend due SequelizeUniqueConstraintError: Validation error": "Error creating Alert. Could not save legend due: name must be unique.",
   "Error updating Alert. \nCould not save legend due SequelizeUniqueConstraintError: Validation error": "Error updating Alert. Could not save legend due: name must be unique.",
   "Invalid address": "",
-  "The service can not access the log database!": ""
+  "The service can not access the log database!": "",
+	"About": ""
 }
