--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -43,6 +43,7 @@
   "%y - Two digits year": "%y - Ano com dois digitos",
   ". The process was started successfully": ". O processo foi iniciado com sucesso",
   "404 not found": "404 não encontrado",
+  "About": "Sobre",
   "Access": "Acesso",
   "Activate": "Ativar",
   "Active": "Ativo",
