--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -176,7 +176,7 @@
   "Could not save data series due:  project_id: project_id must be unique,\nname: name must be unique": "Não foi possível salvar a série de dados, já existe um registro com o nome inserido, e o nome deve ser único.",
   "Could not save project: name must be unique": "Não foi possível salvar o projeto, já existe um registro com o nome inserido, e o nome deve ser único.",
   "Count": "Contagem",
-  "Create View": "Create View",
+  "Create View": "Criar Visualização",
   "Creation Type": "Tipo de criação",
   "Crop raster": "Recortar Matriz",
   "Custom": "Personalizada",
@@ -898,8 +898,8 @@
   "View Description": "Descrição da Visualização",
   "View Name": "Nome da Visualização",
   "View Registration": "Registro de Vizualização",
-  "View Service": "View Service",
-  "View Service is required": "View Service is required",
+  "View Service": "Serviço de Visualização",
+  "View Service is required": "Serviço de Visualização é obrigatório",
   "View Update": "Atualização da visualização",
   "View name is required": "O preenchimento do nome da visualização é obrigatório",
   "Views": "Visualizações",
