Inform the user when service can not access the map server

--- a/webapp/locales/es_ES.json
+++ b/webapp/locales/es_ES.json
@@ -962,5 +962,7 @@
   "Error updating Alert. \nCould not save legend due SequelizeUniqueConstraintError: Validation error": "Error updating Alert. Could not save legend due: name must be unique.",
   "Invalid address": "",
   "The service can not access the log database!": "",
-	"About": ""
+	"About": "",
+	"Error": "",
+	"The service can not access the map server!": ""
 }
