--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -954,5 +954,7 @@
   "updated": "updated",
   "w": "w",
   "Invalid address": "Invalid address",
-  "The service can not access the log database!": "The service can not access the log database!"
+  "The service can not access the log database!": "The service can not access the log database!",
+  "Error": " read ECONNRESET",
+  "The service can not access the map server!": "The service can not access the map server!"
 }
