--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -956,5 +956,7 @@
   "updated": "atualizado",
   "w": "w",
   "Invalid address": "Endereço inválido",
-  "The service can not access the log database!": "O serviço não pode acessar o banco de logs!"
+  "The service can not access the log database!": "O serviço não pode acessar o banco de logs!",
+	"Error": " read ECONNRESET",
+	"The service can not access the map server!": "O serviço não pode acessar o servidor de mapas!"
 }
