small fixes and improvements

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -264,6 +264,7 @@
   "Date Time": "Date Time",
   "Days": "Days",
   "Default": "Default",
+  "Default Level Name": "Default Level Name",
   "Default type": "Default type",
   "Delimiter character": "Delimiter character",
   "Dependency failed - key must exist": "Dependency failed - key must exist",
