--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -265,6 +265,7 @@
   "Date Time": "Data Hora",
   "Days": "Dias",
   "Default": "Padrão",
+  "Default Level Name": "Nome do Nível Padrão",
   "Default type": "Tipo padrão",
   "Delimiter character": "Caractere delimitador",
   "Dependency failed - key must exist": "Falha na dependência - a chave deve existir",
