--- a/webapp/locales/es_ES.json
+++ b/webapp/locales/es_ES.json
@@ -962,5 +962,6 @@
   "Error updating Alert. \nCould not save legend due SequelizeUniqueConstraintError: Validation error": "Error updating Alert. Could not save legend due: name must be unique.",
   "Invalid address": "",
   "The service can not access the log database!": "",
-	"About": ""
+	"About": "",
+  "Default Level Name": ""
 }
