allowing the user to enter rgb colors

--- a/webapp/locales/en_US.json
+++ b/webapp/locales/en_US.json
@@ -415,6 +415,7 @@
   "Influence radius is required": "Influence radius is required",
   "Information": "Information",
   "Input Data": "Input Data",
+  "Insert the Color": "Insert the Color",
   "Instance": "Instance",
   "Institute": "Institute",
   "Integer": "Integer",
