--- a/webapp/locales/es_ES.json
+++ b/webapp/locales/es_ES.json
@@ -963,5 +963,6 @@
   "Invalid address": "",
   "The service can not access the log database!": "",
 	"About": "",
-  "Default Level Name": ""
+  "Default Level Name": "",
+	"Insert the Color": ""
 }
