--- a/webapp/locales/pt_BR.json
+++ b/webapp/locales/pt_BR.json
@@ -417,6 +417,7 @@
   "Influence radius is required": "Raio de Influência é requerido",
   "Information": "Informação",
   "Input Data": "Dado de Entrada",
+  "Insert the Color": "Insira a Cor",
   "Instance": "Instância",
   "Institute": "Instituto",
   "Integer": "Inteiro",
